# authentication-server-i10-authentication-server-37955-38070-pre_prod

./: .env.example  .function_call_history  .gitignore  .task_tracker.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_app.py  wsgi.py
.knowledge/: .knowledge.json  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_.github_workflows_ci.yml  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_README.md  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app___init__.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_api___init__.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_api_auth.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_api_users.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_config.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_extensions.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_logging_config.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_models___init__.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_models_token.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_app_models_user.py  _home_kavia_workspace_authentication-server-i10-authentication-server-37955-38070-pre_prod_test_app.py  (+17 more)
(+25 files in other folders)
